# mcp-chess-api

./: README.md  pyproject.toml
src/mcp_chess_server/: chess_api.py  server.py
